--- a/index.html
+++ b/index.html
@@ -129,14 +129,13 @@
         </div>
         <div class="form-group row">
             <div class="col-4">
-                <input id="nhapSo" class="form-control" placeholder="Nhập số n"type="number" />
+                <input id="nhapSo_9" class="form-control" placeholder="Nhập số n"type="number" />
             </div>
             <div class="col-4">
                 <button class="btn btn-success" id="btnThemSo_b9">
                    Thêm số
                   </button>
             </div>
-            
         </div>
         <div class="alert alert-success col-4" id="ketQua_b91"></div>
         <div class="form-group">
